--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                             <img src="assets/img/featured-item-01.png" alt="icon1">
                         </div>
                         <h3 class="inner-title">Modern Strategy</h3>
-                        <p class="inner-desc">Customize anything in this template to fit your website needs</p>
+                        <p class="inner-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum, consectetur dolores? Porro ea, facilis enim ad aliquid ipsa necessitatibus! Similique accusamus cum inventore dolor ipsam? Ratione natus consectetur quis inventore?</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-sm-6 col-12">
